2008-08-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* Preprocessor_pf.cpp (Preprocessor_pf::convertObject): fixed bug
	#2056510 "Compile time" address tables objects dont
	work. Preprocessor in compiler for PF for some reason used to
	convert all compile time AddressTable objects to run-time. There
	was no mention of this in changelog and no comment in the module.

	* RuleSetView.cpp (RuleSetView::copySelectedObject): fixed bug
	#2055984: "Negate Objects not work". the problem really was not
	related to negated objects, instead, user could not copy an object
	from rule element into clipboard more than once. Copying whole
	rule into clipboard worked fine, but individual object inside the
	rule could be placed in clipboard only one time.

2008-08-15  Vadim Kurland  <vadim@vk.crocodile.org>

	* Preprocessor.cpp (Preprocessor::isUsedByThisFirewall): fixed bug
	#2051629: "group with dns names are handled as empty". This bug
	triggered when object group that consisted of DNSName objects set
	to resolve at compile time was used in policy rule and at the same
	none of these DNSName objects were used in rules. If an object
	from the group was itself used in a rule, compiler properly
	converted it to address. But object was never used in rules by
	itself, it was not converted.

2008-08-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* SSHUnx.cpp (SSHUnx::SSHUnx): fixed bug #2051005: "install to
	localhost fails with pam_thinkfinger". Built-in installer
	recognizes password prompt produced by pam_thinkfinger module that
	accepts both password or asks user to swipe finger against
	fingerprint reader device. Note that installer is likely to not
	work with fingerprint authentication because it will not wait once
	it gets to the point where pam_thinkfinger module asks for the
	password or fingerprint and will try to enter password. However
	with this change password prompt from pam_thinkfiger is recognized
	and password authentication becomes possible.
