@@ -60,6 +60,12 @@ namespace fwcompiler {
         bool   have_dynamic_interfaces;
         std::map<std::string, int> chain_usage_counter;
 
+        // use minus_n_commands map to track creation of chains.
+        // Using external map object for this to be able to track
+        // new chains across different compiler runs (used to process
+        // rules in different policy or nat objects)
+        std::map<const std::string, bool> *minus_n_commands;
+        
         static const std::list<std::string>& getStandardChains();
         std::string getInterfaceVarName(libfwbuilder::FWObject *iface,
                                         bool v6=false);
@@ -443,9 +449,11 @@ namespace fwcompiler {
 
             bool                             init;
             bool                             print_once_on_top;
+            bool                             minus_n_tracker_initialized;
             std::string                      current_rule_label;
-            std::map<const std::string,bool> chains;
 
+            void InitializeMinusNTracker();
+            
             virtual std::string _createChain(const std::string &chain);
             virtual std::string _startRuleLine();
             virtual std::string _endRuleLine();
@@ -524,11 +532,13 @@ namespace fwcompiler {
 	NATCompiler_ipt(libfwbuilder::FWObjectDatabase *_db,
                         const std::string &fwname,
                         bool ipv6_policy,
-                        fwcompiler::OSConfigurator *_oscnf) :
+                        fwcompiler::OSConfigurator *_oscnf,
+                        std::map<const std::string, bool> *m_n_commands_map) :
         NATCompiler(_db, fwname, ipv6_policy, _oscnf)
         {
             have_dynamic_interfaces=false;
             printRule=NULL;
+            minus_n_commands = m_n_commands_map;
         }
 
 
